使用 Colaboratory 建立

--- a/0306.ipynb
+++ b/0306.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM66MzfawD2Ls4G0LJH4LhW",
+      "authorship_tag": "ABX9TyM74W9frY7m62jkMVvoiuR9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,70 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "2wnj-AyA0PAt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2wnj-AyA0PAt",
+        "outputId": "7b584905-c9e4-4f81-a414-03b3579b6f91"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0306\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"0306\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hi!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N3kR33N15QaF",
+        "outputId": "26dad956-47f2-4f56-e986-9837cad335cc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hi!今天是0306\")"
+      ],
+      "metadata": {
+        "id": "JxLY9Rbt5UVl",
+        "outputId": "3a64bb88-9eeb-4c55-d7d3-fe11d4a16888",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi!今天是0306\n"
+          ]
+        }
+      ]
     }
   ]
 }
