使用 Colaboratory 建立

--- a/0306.ipynb
+++ b/0306.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7abSAQ3N5F+8/0xRu0X3a",
+      "authorship_tag": "ABX9TyOqjfuTvLqxFc0SGA3FJgwr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,6 +153,58 @@
       },
       "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mw9AeDGW_Tg5",
+        "outputId": "8ebe6899-cb54-4c6d-8f7d-00f5960c0b18"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b, c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6hl27oew_YoL",
+        "outputId": "9b453a03-d31a-48f5-e1bf-b31223a49554"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 1, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "code",
